fix header overflow bug

--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,3 +1,10 @@
+header {
+    position: absolute;
+    top: 0; left: 0;
+    width: 100vw;
+    height: 100vh;
+    overflow: hidden;
+}
 .header {
     display: flex;
     align-items: center;
@@ -10,7 +17,6 @@
     position: absolute;
     top: 0;left: 0;right: 0;
     z-index: 1000;
-    overflow-y: visible;
 }
 
 .header .logo img {
